--- a/packages/payload-config/package.json
+++ b/packages/payload-config/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@timmac/cms",
+  "name": "@timmac/payload-config",
   "description": "A blank template to get started with Payload",
   "version": "1.0.0",
   "main": "dist/server.js",
   "license": "MIT",
   "scripts": {
-    "dev": "PAYLOAD_CONFIG_PATH=../../packages/payload-config/src/payload.config.ts nodemon",
+    "dev": "PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
     "build:payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload build",
     "build:server": "tsc",
     "build": "yarn copyfiles && yarn build:payload && yarn build:server",
@@ -21,7 +21,6 @@
     "@payloadcms/db-mongodb": "^1.0.6",
     "@payloadcms/plugin-cloud": "^2.2.6",
     "@payloadcms/richtext-slate": "^1.1.0",
-    "@timmac/payload-config": "^1.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
