--- a/packages/payload-config/package.json
+++ b/packages/payload-config/package.json
@@ -24,7 +24,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^8.6.0",
     "express": "^4.18.2",
-    "payload": "^2.0.15"
+    "payload": "^2.0.15",
+    "react-colorful": "^5.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
